--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "20-react-portfolio",
-  "homepage": "https://abstynent.github.io/portfolio-v2",
+  "homepage": "https://abstynent.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
